--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/webgl_ust.loader.js";
+      var loaderUrl = buildUrl + "/webgl10.28.loader.js";
       var config = {
-        dataUrl: buildUrl + "/webgl_ust.data",
-        frameworkUrl: buildUrl + "/webgl_ust.framework.js",
-        codeUrl: buildUrl + "/webgl_ust.wasm",
+        dataUrl: buildUrl + "/webgl10.28.data",
+        frameworkUrl: buildUrl + "/webgl10.28.framework.js",
+        codeUrl: buildUrl + "/webgl10.28.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Biosphere3",
