--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Unity WebGL Player | Biosphere3</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
@@ -23,8 +24,14 @@
         <div id="unity-build-title">Biosphere3</div>
       </div>
     </div>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script>
-
+      const tonConnectUI = new TON_CONNECT_UI.TonConnectUI({
+        manifestUrl: 'https://prediction-market-coral.vercel.app/tonconnect-manifest.json',
+        // buttonRootId: 'ton-connect'
+      });
+    </script>
+    <script>
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
       var loadingBar = document.querySelector("#unity-loading-bar");
@@ -110,6 +117,7 @@
                 fullscreenButton.onclick = () => {
                   unityInstance.SetFullscreen(1);
                 };
+                window.unityInstance = unityInstance;
               }).catch((message) => {
                 alert(message);
               });
