--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body style="text-align: center; padding: 0; border: 0; margin: 0;">
     <canvas id="unity-canvas" width=375 height=667 tabindex="-1" style="width: 375px; height: 667px; background: #231F20"></canvas>
     <script src="Build/Bio3.loader.js"></script>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         // Mobile device style: fill the whole browser client area with the game canvas:
@@ -35,6 +36,7 @@
         // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
         // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
       });
+      window.Telegram.WebApp.expand();
     </script>
   </body>
 </html>
