--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/win_ust_11.25.loader.js";
+      var loaderUrl = buildUrl + "/webgl_11.27.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/win_ust_11.25.data.unityweb",
-        frameworkUrl: buildUrl + "/win_ust_11.25.framework.js.unityweb",
-        codeUrl: buildUrl + "/win_ust_11.25.wasm.unityweb",
+        dataUrl: buildUrl + "/webgl_11.27.data",
+        frameworkUrl: buildUrl + "/webgl_11.27.framework.js",
+        codeUrl: buildUrl + "/webgl_11.27.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Biosphere3",
