--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/webgl_12.16.loader.js";
+      var loaderUrl = buildUrl + "/win_ust_12.17.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/webgl_12.16.data",
-        frameworkUrl: buildUrl + "/webgl_12.16.framework.js",
-        codeUrl: buildUrl + "/webgl_12.16.wasm",
+        dataUrl: buildUrl + "/win_ust_12.17.data",
+        frameworkUrl: buildUrl + "/win_ust_12.17.framework.js",
+        codeUrl: buildUrl + "/win_ust_12.17.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Biosphere3",
