--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
+      <canvas id="unity-canvas" width=1080 height=1920 tabindex="-1"></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/win_ust_12.17.loader.js";
+      var loaderUrl = buildUrl + "/webgl_12.18.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/win_ust_12.17.data",
-        frameworkUrl: buildUrl + "/win_ust_12.17.framework.js",
-        codeUrl: buildUrl + "/win_ust_12.17.wasm",
+        dataUrl: buildUrl + "/webgl_12.18.data",
+        frameworkUrl: buildUrl + "/webgl_12.18.framework.js",
+        codeUrl: buildUrl + "/webgl_12.18.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Biosphere3",
@@ -98,8 +98,8 @@
 
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
-        canvas.style.width = "960px";
-        canvas.style.height = "600px";
+        canvas.style.width = "1080px";
+        canvas.style.height = "1920px";
       }
 
       document.querySelector("#unity-loading-bar").style.display = "block";
