--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
           document.querySelector("#unity-progress-bar-full").style.width = 100 * progress + "%";
               }).then((unityInstance) => {
                 document.querySelector("#unity-loading-bar").style.display = "none";
-                unityInstance.SetFullscreen(1);
-                // document.querySelector("#unity-fullscreen-button").onclick = () => {
+                // // unityInstance.SetFullscreen(1);
+                // document.querySelector("#unity-warning").onclick = () => {
                 //   unityInstance.SetFullscreen(1);
                 // };
 
