--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         </div>
       </div>
       <div id="unity-warning"> </div>
-      <!-- <div id="unity-footer">
+      <div id="unity-footer">
         <div id="unity-logo-title-footer"></div>
         <div id="unity-fullscreen-button"></div>
         <div id="unity-build-title">Biosphere3</div>
-      </div> -->
+      </div>
     </div>
     <script>
       var canvas = document.querySelector("#unity-canvas");
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/webgl_12.18.loader.js";
+      var loaderUrl = buildUrl + "/webgl_12.23.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/webgl_12.18.data",
-        frameworkUrl: buildUrl + "/webgl_12.18.framework.js",
-        codeUrl: buildUrl + "/webgl_12.18.wasm",
+        dataUrl: buildUrl + "/webgl_12.23.data",
+        frameworkUrl: buildUrl + "/webgl_12.23.framework.js",
+        codeUrl: buildUrl + "/webgl_12.23.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Biosphere3",
@@ -111,8 +111,7 @@
           document.querySelector("#unity-progress-bar-full").style.width = 100 * progress + "%";
               }).then((unityInstance) => {
                 document.querySelector("#unity-loading-bar").style.display = "none";
-                // // unityInstance.SetFullscreen(1);
-                // document.querySelector("#unity-warning").onclick = () => {
+                // document.querySelector("#unity-fullscreen-button").onclick = () => {
                 //   unityInstance.SetFullscreen(1);
                 // };
 
