--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/webgl_12.27.html.loader.js";
+      var loaderUrl = buildUrl + "/webgl_12.30.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/webgl_12.27.html.data",
-        frameworkUrl: buildUrl + "/webgl_12.27.html.framework.js",
-        codeUrl: buildUrl + "/webgl_12.27.html.wasm",
+        dataUrl: buildUrl + "/webgl_12.30.data",
+        frameworkUrl: buildUrl + "/webgl_12.30.framework.js",
+        codeUrl: buildUrl + "/webgl_12.30.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Biosphere3",
